--- a/index.html
+++ b/index.html
@@ -9,200 +9,100 @@
 
 <style>
   :root {
-    --sidebar-width: 220px;
+    --sidebar-w: 220px;
     --accent: #0077ff;
   }
+  html,body{height:100%;margin:0;font-family:Arial, sans-serif;background:#f6f6f6;}
 
-  html, body {
-    height: 100%;
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background: #f6f6f6;
-  }
+/* SIDEBAR */
+#sidebar{
+  position:fixed; left:0; top:0; bottom:0;
+  width:var(--sidebar-w); padding:20px; box-sizing:border-box;
+  background:#1e1e1e; color:#fff; overflow:auto; z-index:60;
+}
+#sidebar h2{margin:0 0 12px 0}
+.year-btn{
+  display:block; width:100%; padding:10px; margin:8px 0;
+  background:#333; color:#fff; border:0; border-radius:6px; cursor:pointer;
+  text-align:left; font-size:15px;
+}
+.year-btn:hover{background:#444}
+#compare-btn{
+  margin-top:18px; width:100%; padding:12px; background:var(--accent);
+  color:#fff; border:0; border-radius:8px; cursor:pointer; font-weight:600;
+}
 
-  /* SIDEBAR */
-  #sidebar {
-    position: fixed;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    width: var(--sidebar-width);
-    padding: 20px;
-    box-sizing: border-box;
-    background: #1e1e1e;
-    color: white;
-    overflow-y: auto;
-    z-index: 60;
-  }
+/* MAIN */
+#main-area{
+  position:fixed; left:var(--sidebar-w); right:0; top:0; bottom:0;
+  display:flex; align-items:center; justify-content:center; background:#eaeaea; z-index:10;
+}
+model-viewer#main-model{ width:80%; height:80%; --poster-color:transparent; }
 
-  #sidebar h2 { margin: 0 0 12px 0; font-size: 18px; }
-  .year-btn {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    margin: 8px 0;
-    background: #333;
-    color: white;
-    border: 0;
-    border-radius: 6px;
-    cursor: pointer;
-    text-align: left;
-    font-size: 15px;
-  }
-  .year-btn:hover { background: #444; }
+/* COMPARE OVERLAY */
+#compare-overlay{
+  display:none; position:fixed;
+  left:var(--sidebar-w); top:0;
+  width:calc(100vw - var(--sidebar-w)); height:100vh;
+  background:#fff; z-index:200; overflow:hidden;
+}
 
-  #compare-btn {
-    margin-top: 18px;
-    display: block;
-    width: 100%;
-    padding: 12px;
-    background: var(--accent);
-    color: white;
-    border: 0;
-    border-radius: 8px;
-    cursor: pointer;
-    font-weight: 600;
-    font-size: 15px;
-  }
-  #compare-btn:hover { filter: brightness(.95); }
+/* back button */
+#compare-back{
+  position:absolute; top:14px; left:14px; z-index:400;
+  padding:10px 14px; background:#000; color:#fff; border:0; border-radius:6px; cursor:pointer;
+}
 
-  /* MAIN VIEW */
-  #main-area {
-    position: fixed;
-    left: var(--sidebar-width);
-    top: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #eaeaea;
-    z-index: 10;
-  }
+/* side lists */
+.side-list{
+  position:absolute; top:50%; transform:translateY(-50%);
+  display:flex; flex-direction:column; gap:10px; z-index:400; width:140px;
+}
+#left-list{ left:20px }
+#right-list{ right:20px; text-align:right }
+.side-list button{ padding:8px 10px; background:#222; color:#fff; border:0; border-radius:6px; cursor:pointer }
+.side-list button:hover{ background:#444 }
 
-  model-viewer#main-model {
-    width: 80%;
-    height: 80%;
-    --poster-color: transparent;
-  }
+/* compare container: both viewers exactly overlapping */
+#compare-container{ position:absolute; inset:0; overflow:hidden; }
+model-viewer.compare{
+  position:absolute; inset:0; width:100%; height:100%;
+  --poster-color:transparent; pointer-events:auto; touch-action:none;
+}
 
-  /* COMPARE OVERLAY */
-  #compare-overlay {
-    display: none;
-    position: fixed;
-    left: var(--sidebar-width);
-    top: 0;
-    width: calc(100vw - var(--sidebar-width));
-    height: 100vh;
-    background: #fff;
-    z-index: 200;
-    overflow: hidden;
-  }
+/* initial clip: left viewer shows left half, right viewer shows right half */
+#viewer-left{ z-index:100; clip-path: inset(0 calc(50%) 0 0); }
+#viewer-right{ z-index:110; clip-path: inset(0 0 0 calc(50%)); }
 
-  #compare-back {
-    position: absolute;
-    top: 16px;
-    left: 16px;
-    z-index: 300;
-    padding: 10px 14px;
-    background: #000;
-    color: #fff;
-    border: 0;
-    border-radius: 6px;
-    cursor: pointer;
-  }
+/* vertical slider */
+#slider{
+  position:absolute; top:0; height:100%; width:6px; background:#ff3b3b;
+  left:50%; transform:translateX(-50%); z-index:350; cursor:ew-resize; border-radius:3px;
+}
 
-  /* left/right lists inside compare (centered vertically) */
-  .side-list {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    z-index: 300; /* above the model-viewers */
-    width: 140px;
-  }
-  #left-list { left: 20px; }
-  #right-list { right: 20px; text-align: right; }
-
-  .side-list button {
-    padding: 8px 10px;
-    background: #222;
-    color: #fff;
-    border: 0;
-    border-radius: 6px;
-    cursor: pointer;
-    text-align: center;
-  }
-  .side-list button:hover { background: #444; }
-
-  /* compare container (both model-viewers exactly overlapping) */
-  #compare-container {
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    overflow: hidden;
-  }
-
-  model-viewer.compare {
-    position: absolute;
-    inset: 0;
-    width: 100%;
-    height: 100%;
-    --poster-color: transparent;
-    /* allow interaction */
-    pointer-events: auto;
-    touch-action: none;
-  }
-
-  /* top viewer (left half visible by clip-path), bottom viewer (right half visible) */
-  #viewer-left { z-index: 100; clip-path: inset(0 calc(50%) 0 0); }
-  #viewer-right { z-index: 110; clip-path: inset(0 0 0 calc(50%)); }
-
-  /* vertical slider line - placed inside compare-container for easy coords */
-  #slider {
-    position: absolute;
-    top: 0;
-    height: 100%;
-    width: 4px;
-    background: #ff3b3b;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 250;
-    cursor: ew-resize;
-    border-radius: 2px;
-  }
-
-  /* hide model-viewer default interaction prompts/controls */
-  model-viewer::part(default-controls) {
-    display: none !important;
-  }
+/* hide model-viewer default UI parts */
+model-viewer::part(default-controls){ display:none !important; }
 </style>
 </head>
 <body>
 
-  <!-- Sidebar -->
+  <!-- SIDEBAR -->
   <div id="sidebar">
     <h2>Modelle</h2>
     <div id="year-list"></div>
-
     <button id="compare-btn">Vergleichen</button>
   </div>
 
-  <!-- Main area -->
+  <!-- MAIN -->
   <div id="main-area">
     <model-viewer id="main-model"
       camera-controls
       interaction-prompt="none"
       interaction-prompt-threshold="0"
-      alt="Hauptmodell">
-    </model-viewer>
+      alt="Hauptmodell"></model-viewer>
   </div>
 
-  <!-- Compare overlay -->
+  <!-- COMPARE OVERLAY -->
   <div id="compare-overlay" aria-hidden="true">
     <button id="compare-back">← Zurück</button>
 
@@ -210,30 +110,26 @@
     <div id="right-list" class="side-list"></div>
 
     <div id="compare-container">
-      <!-- left/top model -->
       <model-viewer id="viewer-left" class="compare"
         camera-controls
         interaction-prompt="none"
         interaction-prompt-threshold="0"
-        alt="linkes Modell">
-      </model-viewer>
+        alt="linkes Modell"></model-viewer>
 
-      <!-- right/bottom model that will be clipped on the left -->
       <model-viewer id="viewer-right" class="compare"
         camera-controls
         interaction-prompt="none"
         interaction-prompt-threshold="0"
-        alt="rechtes Modell">
-      </model-viewer>
-
-      <div id="slider" aria-hidden="false"></div>
+        alt="rechtes Modell"></model-viewer>
     </div>
+
+    <div id="slider" role="separator" aria-orientation="vertical"></div>
   </div>
 
 <script>
-/* -------------------------
-   CONFIG: your file names
-   ------------------------- */
+/* ===========================
+   Konfiguration: Dateinamen
+   =========================== */
 const MODEL_LIST = [
   "1150.glb",
   "1175.glb",
@@ -243,22 +139,22 @@ const MODEL_LIST = [
   "1936.glb"
 ];
 
-/* ---------- sidebar buttons ---------- */
+/* ---------- Sidebar (Normalmodus) ---------- */
 const yearList = document.getElementById('year-list');
-MODEL_LIST.forEach(fn => {
-  const name = fn.replace(/\.glb$/i, '');
-  const btn = document.createElement('button');
-  btn.className = 'year-btn';
-  btn.textContent = name;
-  btn.onclick = () => { mainModel.src = fn; };
-  yearList.appendChild(btn);
-});
-
-/* show first model immediately */
 const mainModel = document.getElementById('main-model');
+
+MODEL_LIST.forEach(fn=>{
+  const label = fn.replace(/\.glb$/i,'');
+  const b = document.createElement('button');
+  b.className = 'year-btn';
+  b.textContent = label;
+  b.onclick = () => { mainModel.src = fn; };
+  yearList.appendChild(b);
+});
+// show first model immediately
 mainModel.src = MODEL_LIST[0];
 
-/* ---------- compare UI elements ---------- */
+/* ---------- Compare UI refs ---------- */
 const compareBtn = document.getElementById('compare-btn');
 const compareOverlay = document.getElementById('compare-overlay');
 const compareBack = document.getElementById('compare-back');
@@ -269,143 +165,125 @@ const viewerRight = document.getElementById('viewer-right');
 const slider = document.getElementById('slider');
 const compareContainer = document.getElementById('compare-container');
 
-/* build side lists inside compare overlay */
-function buildCompareLists() {
-  leftList.innerHTML = '';
-  rightList.innerHTML = '';
-  MODEL_LIST.forEach(fn => {
-    const name = fn.replace(/\.glb$/i, '');
+let currentPct = 0.5; // slider percent (0..1)
+
+/* Build compare lists */
+function buildCompareLists(){
+  leftList.innerHTML = ''; rightList.innerHTML = '';
+  MODEL_LIST.forEach(fn=>{
+    const lbl = fn.replace(/\.glb$/i,'');
     const bl = document.createElement('button');
-    bl.textContent = name;
-    bl.onclick = () => { viewerLeft.src = fn; };
+    bl.textContent = lbl;
+    bl.onclick = ()=> viewerLeft.src = fn;
     leftList.appendChild(bl);
 
     const br = document.createElement('button');
-    br.textContent = name;
-    br.onclick = () => { viewerRight.src = fn; };
+    br.textContent = lbl;
+    br.onclick = ()=> viewerRight.src = fn;
     rightList.appendChild(br);
   });
 }
 
 /* open compare */
-compareBtn.addEventListener('click', () => {
+compareBtn.addEventListener('click', ()=>{
   buildCompareLists();
   compareOverlay.style.display = 'block';
-  compareOverlay.setAttribute('aria-hidden', 'false');
+  compareOverlay.setAttribute('aria-hidden','false');
 
-  // default models if not set
-  if (!viewerLeft.src) viewerLeft.src = MODEL_LIST[0];
-  if (!viewerRight.src) viewerRight.src = MODEL_LIST[MODEL_LIST.length - 1];
+  // default models if empty
+  if(!viewerLeft.src) viewerLeft.src = MODEL_LIST[0];
+  if(!viewerRight.src) viewerRight.src = MODEL_LIST[MODEL_LIST.length-1];
 
-  // center slider and clip
-  requestAnimationFrame(() => setSliderPercent(0.5));
+  // center slider
+  requestAnimationFrame(()=> setSliderPercent(0.5));
 });
 
 /* close compare */
-compareBack.addEventListener('click', () => {
+compareBack.addEventListener('click', ()=>{
   compareOverlay.style.display = 'none';
-  compareOverlay.setAttribute('aria-hidden', 'true');
+  compareOverlay.setAttribute('aria-hidden','true');
 });
 
-/* ---------- slider logic (drag + touch) ---------- */
+/* -------------------------
+   Slider: drag & touch handling
+   ------------------------- */
 let dragging = false;
 
-slider.addEventListener('mousedown', (e) => { e.preventDefault(); dragging = true; });
-window.addEventListener('mouseup', () => dragging = false);
-window.addEventListener('mouseleave', () => dragging = false);
+slider.addEventListener('mousedown', (e)=> { e.preventDefault(); dragging = true; });
+window.addEventListener('mouseup', ()=> dragging = false);
+window.addEventListener('mouseleave', ()=> dragging = false);
+window.addEventListener('mousemove', (e)=> { if(!dragging) return; updateFromClientX(e.clientX); });
 
-window.addEventListener('mousemove', (e) => {
-  if (!dragging) return;
-  updateFromClientX(e.clientX);
-});
+slider.addEventListener('touchstart', (e)=> { e.preventDefault(); dragging = true; });
+window.addEventListener('touchend', ()=> dragging = false);
+window.addEventListener('touchcancel', ()=> dragging = false);
+window.addEventListener('touchmove', (e)=> { if(!dragging) return; updateFromClientX(e.touches[0].clientX); });
 
-slider.addEventListener('touchstart', (e) => { e.preventDefault(); dragging = true; });
-window.addEventListener('touchend', () => dragging = false);
-window.addEventListener('touchcancel', () => dragging = false);
-window.addEventListener('touchmove', (e) => {
-  if (!dragging) return;
-  updateFromClientX(e.touches[0].clientX);
-});
-
-function updateFromClientX(clientX) {
+function updateFromClientX(clientX){
   const rect = compareContainer.getBoundingClientRect();
-  // clamp inside container
-  const leftBound = rect.left + 10;
-  const rightBound = rect.right - 10;
+  const leftBound = rect.left + 6;
+  const rightBound = rect.right - 6;
   const clamped = Math.min(Math.max(clientX, leftBound), rightBound);
   const x = clamped - rect.left;
-  const pct = rect.width ? (x / rect.width) : 0.5;
+  const pct = rect.width ? (x/rect.width) : 0.5;
   setSliderPercent(pct);
 }
 
-function setSliderPercent(pct) {
-  pct = Math.min(Math.max(pct, 0.01), 0.99);
+function setSliderPercent(pct){
+  pct = Math.max(0.01, Math.min(0.99, pct));
+  currentPct = pct;
   const rect = compareContainer.getBoundingClientRect();
   const x = pct * rect.width;
-  // move slider (relative to compareContainer)
-  slider.style.left = (rect.left + x) + 'px';
-  // set clip-paths on viewers relative to container width (use px values)
+  // Position slider relative to overlay (use page coords for left)
+  const overlayRect = compareOverlay.getBoundingClientRect();
+  slider.style.left = (overlayRect.left + x) + 'px';
+  // Set clip-paths on viewers using px values relative to container width
   viewerLeft.style.clipPath = `inset(0 ${Math.round(rect.width - x)}px 0 0)`;
   viewerRight.style.clipPath = `inset(0 0 0 ${Math.round(x)}px)`;
 }
 
-/* When window resizes keep same relative slider position */
-let currentPct = 0.5;
-function recalcSliderOnResize() {
-  // read slider left relative to compareContainer and store pct
-  const rect = compareContainer.getBoundingClientRect();
-  const sliderRect = slider.getBoundingClientRect();
-  const x = sliderRect.left - rect.left;
-  currentPct = rect.width ? (x / rect.width) : 0.5;
-  setTimeout(()=> setSliderPercent(currentPct), 0);
-}
-window.addEventListener('resize', recalcSliderOnResize);
+/* keep slider position on resize */
+window.addEventListener('resize', ()=>{
+  setTimeout(()=> setSliderPercent(currentPct), 10);
+});
 
-/* ---------- Camera sync (bidirectional, stable) ---------- */
+/* -------------------------
+   Camera sync (bidirectional, stable)
+   ------------------------- */
 let syncing = false;
-
-function copyCamera(source, target) {
-  if (!source || !target) return;
-  if (syncing) return;
+function copyCamera(source, target){
+  if(syncing) return;
   syncing = true;
   try {
-    // copy cameraOrbit (string), cameraTarget (string), fieldOfView (number)
-    if (source.cameraOrbit) target.cameraOrbit = source.cameraOrbit;
-    if (source.cameraTarget) target.cameraTarget = source.cameraTarget;
-    if (typeof source.fieldOfView !== 'undefined') target.fieldOfView = source.fieldOfView;
-  } catch (e) {
-    // ignore errors if viewer not ready
-  } finally {
-    // tiny delay to avoid recursion
-    setTimeout(() => { syncing = false; }, 0);
-  }
+    // copy cameraOrbit, cameraTarget and fieldOfView if available
+    if(source.cameraOrbit) target.cameraOrbit = source.cameraOrbit;
+    if(source.cameraTarget) target.cameraTarget = source.cameraTarget;
+    if(typeof source.fieldOfView !== 'undefined') target.fieldOfView = source.fieldOfView;
+  } catch(e){}
+  // small timeout to break potential event loops
+  setTimeout(()=> syncing = false, 0);
 }
 
-// listen to camera change events from both viewers
-viewerLeft.addEventListener('camera-change', () => copyCamera(viewerLeft, viewerRight));
-viewerRight.addEventListener('camera-change', () => copyCamera(viewerRight, viewerLeft));
+// listen to camera-change from both viewers
+viewerLeft.addEventListener('camera-change', ()=> copyCamera(viewerLeft, viewerRight));
+viewerRight.addEventListener('camera-change', ()=> copyCamera(viewerRight, viewerLeft));
 
-/* ---------- Prevent default interaction prompt & ensure still start ---------- */
-/* Set a safe initial cameraOrbit for both after load to avoid "preview motion" */
-function setInitialOrbitIfNeeded(viewer) {
+/* Ensure viewers start still (avoid preview motion) by setting an initial orbit after load */
+function setInitial(viewer){
   try {
-    // a comfortable orbit: azimuth elevation radius
     const initial = '0deg 75deg 2.5m';
     viewer.cameraOrbit = initial;
     viewer.cameraTarget = '0m 0m 0m';
-  } catch (e) {}
+  } catch(e){}
 }
-viewerLeft.addEventListener('load', () => setInitialOrbitIfNeeded(viewerLeft));
-viewerRight.addEventListener('load', () => setInitialOrbitIfNeeded(viewerRight));
+viewerLeft.addEventListener('load', ()=> setInitial(viewerLeft));
+viewerRight.addEventListener('load', ()=> setInitial(viewerRight));
 
-/* Hide interaction prompt via attributes (already set in HTML) and css ::part */
-
-/* Optional: close compare with Esc key */
-window.addEventListener('keydown', (e) => {
-  if (e.key === 'Escape' && compareOverlay.style.display === 'block') {
-    compareOverlay.style.display = 'none';
-  }
+/* Optional: ESC closes overlay */
+window.addEventListener('keydown', (e)=>{
+  if(e.key === 'Escape' && compareOverlay.style.display === 'block') compareOverlay.style.display = 'none';
 });
 </script>
+
 </body>
 </html>
